solved study case 1 2 and 3  ១. ពេលជូបស្រៈ ាំ យើងអាចវាយជាសំរាយដោយវាយស្រៈ ា ហើយ ំ ពេលក្រោយ ឬ វាយ shift + A តែម្ដងក៏បានមិនខុស     ២. ពេលជូបស្រៈ ា យើងអាចវាយ shift + A បានដូចគ្នាតែលើសស្រៈ ំ ដែលជាការលើលចំនួនខុសមិនចាំបាច់     ៣. ការបង្ហាញអក្សរតាងមិនទាន់ត្រូវនៅពេលដែលយើងត្រូវវាយស្រៈ ាំ ដោយសារយើងបំបែកវាជាមួយតួៗ

--- a/src/app/component/typing-textarea/typing-textarea.component.scss
+++ b/src/app/component/typing-textarea/typing-textarea.component.scss
@@ -29,3 +29,6 @@ input:focus {
     color: #fff;
     text-align: center;
 }
+.announce-result{
+    text-align: center;
+}
